<resources>
    <string name="app_name">Doggy</string>
    <string name="formulaire1">You are looking for a :</string>
    <string name="takePicture">take a pic !</string>
    <string name="valider">let s go !</string>
    <string name="like">love it :)</string>
    <string name="dislike">Nope :(</string>
    <string name="dislike_confirm">U really don t like ? :(</string>
    <string name="love_confirm">u loved him</string>
    <string name="action_settings">options</string>
    <string name="retour">go back</string>


    <string-array name="dogs_race">
        <item>pug</item>
        <item>shiba</item>
        <item>stbernard</item>
        <item>corgi</item>
        <item>bulldog</item>
        <item>boxer</item>
        <item>rottweiler</item>
        <item>retriever</item>
        <item>papillon</item>
        <item>husky</item>
        <item>akita</item>
        <item>beagle</item>
        <item>bluetick</item>
        <item>african</item>
    </string-array>

    <string-array name="dogs_name">
        <item>Leon</item>
        <item>Kyubi</item>
        <item>Robert</item>
        <item>Kirikou</item>
        <item>Max</item>
        <item>Dobby</item>
        <item>Jon</item>
        <item>Gandalf</item>
        <item>Noisette</item>
        <item>Carl</item>
        <item>Felix</item>
        <item>Leo</item>
        <item>Nougat</item>
        <item>Tosca</item>
        <item>Whisky</item>
        <item>Mika</item>
        <item>Youka</item>
        <item>Gummy</item>
        <item>Titan</item>
        <item>Yoda</item>
        <item>Nicolas</item>
        <item>Karlos</item>
        <item>Bob</item>
        <item>Boris</item>
        <item>Thrall</item>
        <item>Timmy</item>
        <item>Ted</item>
        <item>Caramel</item>
        <item>Nutella</item>
        <item>Jorge</item>
        <item>Carapuce</item>
        <item>Cachou</item>
    </string-array>
    <string name="title_activity_list_likes">ListLikesActivity</string>

</resources>
