<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="smd.doggystyle.LikeActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/nomRace"
        android:layout_width="383dp"
        android:layout_height="77dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        tools:layout_editor_absoluteX="1dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="382dp"
        android:layout_height="293dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/buttonLike"
        app:layout_constraintTop_toBottomOf="@+id/nomRace"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/buttonDislike"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/dislike"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonLike"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        android:text="@string/like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

</android.support.constraint.ConstraintLayout>
